--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ Berikut adalah beberapa strategi bagi player yang akan memulai permainan poker o
             </div>
             <div class="col-12 mt-4">
                 <p class="mbr-text mb-0 mbr-fonts-style copyright align-center display-7">
-                    © Copyright 2021 Mobirise - All Rights Reserved
+                    © Copyright 2021 KAMPUSPOKER - All Rights Reserved
                 </p>
             </div>
         </div>
